--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Welcome - TMO</title>
+<title>HallMark</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <style>
 .navbar-inverse {
@@ -55,7 +55,14 @@
         </ul>
       </div>
     </nav>
-    
+    <div class="container" style="margin-top:10%">
+		<h1 style="font-weight:500;color:#317eac">Welcome.</h1>
+        <h2 style="color:#317eac">Welcome to our site!!! We offer the best deals in electronic goods.</h2>
+        <p class="lead">You can order 
+                any of our items today. Each item listing has detailed 
+                information to help you choose the right one.</p>
+
+	</div>
     <div class="modal fade" id="loginModal" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
